All the text written, basic navigation complete. Things to do: add a back button, get better images, clean up formatting, add an example image search function

--- a/dfa.html
+++ b/dfa.html
@@ -15,7 +15,7 @@
         </ul>
         <ul>
           <li><a href="#">About</a></li>
-          <li><a href="#">Official guidelines</a></li>
+          <li><a href="#">Official clinical guidelines</a></li>
         </ul>
       </nav>
       <h2 id="header" class ="none"></h2>
