Picked out some better images, slight improvement to formatting. Still need to add a back button, animations, and a button to search google images

--- a/dfa.html
+++ b/dfa.html
@@ -22,7 +22,7 @@
     <div id = "main-container">
         
         <article id = "first-article" class="flex">
-            <img src="resources/splash-image.png">
+            <img src="resources/splash-image.png" id="splash">
             <h4> Help, I've hit my front tooth!</h4>
             <h3> Click to continue </h3>
         </article>
