Webpack integrated - note that the development-built holds the latest version that has not yet been compiled to webpack. Things to do: update the webpack compiled version to the latest version Properly install the Pico.css library Add animations (bonus objective) Note that when compiling webpack will need to redo the image links

--- a/development-build/dfa.html
+++ b/development-build/dfa.html
@@ -11,11 +11,11 @@
 <body>
     <nav class="container-fluid">
         <ul>
-          <li><strong>Dental First Aid</strong></li>
+          <img src="resources/tooth_icon.jpg" id="icon">
         </ul>
         <ul>
           <li><a href="#">About</a></li>
-          <li><a href="#">Official clinical guidelines</a></li>
+          <li><a href="https://www.iadt-dentaltrauma.org/1-9%20%20iadt%20guidelines%20combined%20-%20lr%20-%2011-5-2013.pdf">Clinical guidelines</a></li>
         </ul>
       </nav>
       <h2 id="header" class ="none"></h2>
