Moved files for Github Pages

--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../dist/main.js"></script>
+    <script src="main.js"></script>
 </head>
 <body>
     <nav class="container-fluid">
         <div class="nav-container">
             <ul>
-              <a href="dfa.html"><img src="../resources/title.png" id="icon"></a>
+              <a href="dfa.html"><img src="./resources/title.png" id="icon"></a>
             </ul>
             <ul>
               <li><a href="about.html">About</a></li>
@@ -38,7 +38,7 @@
             You can find the author on:
             <br>
             <br>
-            &emsp;&emsp;<a href="https://github.com/stephen-w-choo"><img src="../resources/GitHub-Mark-64px.png" href="https://github.com/stephen-w-choo"></a>
+            &emsp;&emsp;<a href="https://github.com/stephen-w-choo"><img src="./resources/GitHub-Mark-64px.png" href="https://github.com/stephen-w-choo"></a>
         
         </article>
     </div>
