--- a/public/about.html
+++ b/public/about.html
@@ -11,7 +11,7 @@
     <nav class="container-fluid">
         <div class="nav-container">
             <ul>
-              <a href="dfa.html"><img src="./resources/title.png" id="icon"></a>
+              <a href="dfa.html"><img src="../resources/title.png" id="icon"></a>
             </ul>
             <ul>
               <li><a href="about.html">About</a></li>
@@ -38,7 +38,7 @@
             You can find the author on:
             <br>
             <br>
-            &emsp;&emsp;<a href="https://github.com/stephen-w-choo"><img src="./resources/GitHub-Mark-64px.png" href="https://github.com/stephen-w-choo"></a>
+            &emsp;&emsp;<a href="https://github.com/stephen-w-choo"><img src="../resources/GitHub-Mark-64px.png" href="https://github.com/stephen-w-choo"></a>
         
         </article>
     </div>
