--- a/development-build/dfa.html
+++ b/development-build/dfa.html
@@ -10,13 +10,15 @@
 </head>
 <body>
     <nav class="container-fluid">
-        <ul>
-          <img src="resources/tooth_icon.jpg" id="icon">
-        </ul>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="https://www.iadt-dentaltrauma.org/1-9%20%20iadt%20guidelines%20combined%20-%20lr%20-%2011-5-2013.pdf">Clinical guidelines</a></li>
-        </ul>
+        <div class="nav-container">
+            <ul>
+            <img src="resources/tooth_icon2.png" id="icon">
+            </ul>
+            <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="https://www.iadt-dentaltrauma.org/1-9%20%20iadt%20guidelines%20combined%20-%20lr%20-%2011-5-2013.pdf">Clinical guidelines</a></li>
+            </ul>
+        </div>
       </nav>
       <h2 id="header" class ="none"></h2>
     <div id = "main-container">
