Trying to fix more glitches with Github Pages

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <nav class="container-fluid">
         <div class="nav-container">
             <ul>
-              <a href="dfa.html"><img src="./resources/title.png" id="icon"></a>
+              <a href="index.html"><img src="./resources/title.png" id="icon"></a>
             </ul>
             <ul>
               <li><a href="about.html">About</a></li>
