--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="container-fluid">
         <div class="nav-container">
             <ul>
-                <a href="dfa.html"><img src="./resources/title.png" id="icon"></a>
+                <a href="index.html"><img src="./resources/title.png" id="icon"></a>
             </ul>
             <ul>
               <li><a href="about.html">About</a></li>
