--- a/about.html
+++ b/about.html
@@ -26,13 +26,12 @@
     <div id = "main-container">
         <article>
             <h5>About this site</h5>
-            All recommendations are based off the current dental trauma guidelines (linked above),
-            as well as the author's own experience in dental practice. 
+            The author is a practicing dentist located in Melbourne, Victoria. He was inspired to make this website after encountering two children 
+            whose well-meaning parents had re-implanted their baby teeth after they had been knocked out. Which you should never do for baby teeth, by the way.
             <br>
             <br>
-            The author is a dentist located in Melbourne, who was inspired to make this website
-            after encountering two children whose well-meaning parents had re-implanted their baby teeth after they
-            had been knocked out. Which you should never do for baby teeth, by the way.
+            All recommendations are based off the current international dental trauma guidelines (linked above), as well as the 
+            author's own experience in dental practice.
             <br>
             <br>
             You can find the author on:
